--- a/src/Body/First/First.css
+++ b/src/Body/First/First.css
@@ -1,32 +1,17 @@
 .flex-container {
   width: 100%;
   height: 100vh;
-  display: flex;
-  flex-flow: row nowrap;
-  position: relative;
+  height: 100vh;
   background: linear-gradient(to right bottom, #6509e2 40%, #5a02b4 70%);
 }
 
-.first {
-  height: 300px;
-  flex-grow: 5;
-  padding-top: 250px;
-  padding-right: 150px;
-}
-
-.second {
-  padding-left: 100px;
-  padding-top: 250px;
-  height: 300px;
-  flex-grow: 5;
-}
 
 .focus-in-expand {
-  position: absolute;
   font-size: 20px;
   color: antiquewhite;
-  -webkit-animation: text-focus-in 0.6s cubic-bezier(0.55, 0.085, 0.68, 0.53)
-    both;
+  position: absolute;
+  top: 200px;
+  -webkit-animation: text-focus-in 0.6s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
   animation: text-focus-in 0.6s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
 
@@ -37,6 +22,8 @@
 .vert-move {
   box-shadow: 0px 10px 15px 1px rgba(65, 64, 64, 0.548);
   position: absolute;
+  top: 200px;
+  left: 150px;
   animation-name: bounce-2;
   animation-timing-function: ease;
   animation-duration: 20s;
