--- a/src/Body/Second/Second.css
+++ b/src/Body/Second/Second.css
@@ -1,8 +1,8 @@
 .second-main {
     width: 100%;
     height: 50vh;
+    min-height: 50vh;
     background-color: white;
-    position: relative;
 }
 
 .text-header {
@@ -18,4 +18,11 @@
 
 .text-main-div {
     text-align: center;
+}
+
+.container-fluid {
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto
 }
