--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,22 @@ body {
 	background: linear-gradient(to right bottom, #6509e2 40%, #5a02b4 70%);
 }
 
+/* body::-webkit-scrollbar {
+	width: 1em;
+	background-color: transparent;
+  }
+   
+  body::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+	background-color: antiquewhite;
+	outline: 1px solid slategrey;
+  } */
+
 * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-}
-
-.home,
-.devices,
-.test {
-	display: flex;
-	height: 90vh;
-	align-items: center;
-	justify-content: center;
-	font-size: 3rem;
 }
