--- a/src/Components/Body/Third/Third.css
+++ b/src/Components/Body/Third/Third.css
@@ -1,8 +1,19 @@
 .third-main {
     width: 100%;
-    height: 70vh;
+    height: 75vh;
     background: linear-gradient(to right bottom, #6509e2 40%, #5a02b4 70%);
     position: relative;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Chrome/Safari/Opera */
+    -khtml-user-select: none;
+    /* Konqueror */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
 }
 
 .right-side-content {
@@ -10,7 +21,46 @@
 }
 
 .inside-box-content {
+    position: relative;
+    z-index: 1000;
     margin: 10px;
-    background-color: aqua;
+    background-color: #B5A3D2;
+    opacity: 0.95;
     text-align: center;
+    border-radius: 10px;
+    border: 1px solid #2E2D48;
+	margin-bottom: 20px;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: box-shadow;
+	transition-property: box-shadow;
+}
+
+.inside-box-content:hover, .inside-box-content:focus, .inside-box-content:active {
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  }
+  
+
+.inside-box-content-header {
+    padding-top: 20px;
+    font-family: Nunito, sans-serif;
+    font-size: 17px;
+    /* color: #920F33; */
+    color: white;
+}
+
+.inside-box-content-text {
+    font-family: Nunito, sans-serif;
+    font-size: 17px;
+    color: #2E2D48;
+    padding-bottom: 20px;
+}
+
+.inside-box-content-hr {
+    width: 200px;
+    color: black;
+    height: 2px;
+
 }
