--- a/src/Components/Body/Second/Second.css
+++ b/src/Components/Body/Second/Second.css
@@ -2,13 +2,14 @@
     width: 100%;
     height: 50vh;
     min-height: 50vh;
-    background-color: white;
+	background-color: white;
+	position: relative;
 }
 
 .text-header {
     font-family: 'Inter', sans-serif;
     text-align: center;
-    font-size: 36px;
+    font-size: 40px;
 }
 
 .text-text {
@@ -19,3 +20,13 @@
 .text-main-div {
     text-align: center;
 }
+
+.triangle-bottomleft {
+	width: 0;
+	height: 0;
+	position: absolute;
+	z-index: 1001;
+	bottom: 0;
+	border-bottom: 100px solid red;
+	border-right: 100px solid transparent;
+  }
