some color changes and new defaul admin layout with ls

--- a/src/Pages/Admin/Admin.css
+++ b/src/Pages/Admin/Admin.css
@@ -1,15 +1,15 @@
 .adminpage-main {
   height    : 100vh;
-  background: linear-gradient(to right bottom, #6509e2 40%, #5a02b4 70%);
+  background:#5a02b4;
 }
 
 .App {
   height    : 100vh;
-  background: linear-gradient(to right bottom, #6509e2 40%, #5a02b4 70%);
+  background: #5a02b4;
 }
 
 .sidebar-top-wrapper {
-  background-color: #060b26;
+  background-color: rgba(0, 0, 0, 0.767);
   height          : 80px;
   display         : flex;
   position        : relative;
