background-color on body

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-	background: linear-gradient(to right bottom, #6509e2 40%, #5a02b4 70%);
+	background: #5a02b4;/*linear-gradient(to right bottom, #6509e2 40%, #5a02b4 70%);*/
 }
 
 /* body::-webkit-scrollbar {
