--- a/src/Pages/Admin/Admin.css
+++ b/src/Pages/Admin/Admin.css
@@ -70,7 +70,7 @@
   position: absolute;
   color: white;
   font-size: 36px;
-  font-family: "Inter", sans-serif;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 .react-grid-layout {
